@@ -1,6 +1,0 @@
-<key_list>
- <key>catalog.description</key>
- <key>catalog.title</key>
- <key>description</key>
- <key>title</key>
-</key_list>
