@@ -1,4 +1,0 @@
-catalog.description
-catalog.title
-description
-title
